--- a/gb/24/3/19/n14205794.md
+++ b/gb/24/3/19/n14205794.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【历史的瞬间】荒野就是文明──黄石公园</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/03/id14205796-000_AW3XU-600x400.jpg" />///image2=```diff
 - 黄石国家公园是美国第一个国家公园，也被广泛认为是世界上第一个国家公园。图为黄石大峡谷。(Mladen Antonov/AFP)
@@ -10,8 +10,8 @@
 <hr>
 <p>19世纪中期，美国结束了南北战争。不管是打赢了的北方人还是打输了的南方人，打扫完战场，都开始了另一场开疆拓土的征伐，东部的居民纷纷背起行囊，向西前进，前往茫茫的西部荒原，这是一片未知的土地。</p>
 <p>1869年，地质学家、军队的勘探员第一次大规模进入黄石地区。在此之前，印第安人已在这里生活了几千年，他们用这里的热喷泉做天然的炉灶，在辽阔的草原上追逐美洲野牛，在五彩斑斓的大棱镜前举行敬天地、敬鬼神的祭祀活动。但是拿着枪和笔的现代美国人，把印第安人的家园，开始设定为自己的公园。</p>
-<figure id="attachment_14205797" aria-describedby="caption-attachment-14205797" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/03/id14205797-000_Was6961250.jpg"><img class="size-large wp-image-14205797" src="https://i.epochtimes.com/assets/uploads/2024/03/id14205797-000_Was6961250-600x318.jpg" alt="" width="600" b="318" /></a><figcaption id="caption-attachment-14205797" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%BB%84%E7%9F%B3%E5%85%AC%E5%9B%AD.md#1">黄石公园</a>是全美最大的野生动物保护区，这里有美国最古老也最大的野牛群。（Karen Bleier / AFP）</figcaption></figure>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%BB%84%E7%9F%B3%E5%85%AC%E5%9B%AD.md#1">黄石公园</a>的第一批推动者是科学家和铁路大王。1871年，地质学家海登获得了铁路公司的资助，让他去搞清楚黄石地区到底有些啥？这铁路能不能从这里走呀？国会的议员们也听说美国有这么一块儿特别神奇的地方，于是也表达一下国家的重视和支持，拿出来4万美元。这钱没有白花，海登的考察专业细致，最终的考察报告长达500页。随队前往的艺术家和摄影师为黄石留下了最早的一批影像。</p>
+<figure id="attachment_14205797" aria-describedby="caption-attachment-14205797" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/03/id14205797-000_Was6961250.jpg"><img decoding="async" class="size-large wp-image-14205797" src="https://i.epochtimes.com/assets/uploads/2024/03/id14205797-000_Was6961250-600x318.jpg" alt="" width="600" b="318" /></a><figcaption id="caption-attachment-14205797" class="wp-caption-text">黄石公园是全美最大的野生动物保护区，这里有美国最古老也最大的野牛群。（Karen Bleier / AFP）</figcaption></figure>
+<p>黄石公园的第一批推动者是科学家和铁路大王。1871年，地质学家海登获得了铁路公司的资助，让他去搞清楚黄石地区到底有些啥？这铁路能不能从这里走呀？国会的议员们也听说美国有这么一块儿特别神奇的地方，于是也表达一下国家的重视和支持，拿出来4万美元。这钱没有白花，海登的考察专业细致，最终的考察报告长达500页。随队前往的艺术家和摄影师为黄石留下了最早的一批影像。</p>
 <p>深度的报告以及生动的绘画和图片打动了国会议员。这么牛的地方，一定得保护。1872年3月1日，时任美国总统格兰特签署法令，将黄石河周边的200万英亩地区设立为公共公园，世界上第一个“国家公园”诞生了。</p>
 <p>但是，没人清楚一个由国家保护起来的自然区域应如何管理。成为了旅游胜地后，野生动物遭殃了，猎杀者也开始猖獗。野牛几乎灭绝。于是黄石公园迎来了它历史上的第二批推动者，那就是军队。1886年，50名军人被调往黄石公园，野蛮狩猎得到了控制。但是50个军人面对着几乎是无边无际的黄石公园，力量还是单薄。怎么办呢？总不能你敢向牛开枪，我就向你开枪吧，必须要有法律。</p>
 <p>1894年，一个盗猎者正在剥野牛皮呢，公园管理员抓到他了。他说：好吧，猎枪和刀你们都拿走吧，也就是26美元，我这一张皮就可以换来5美元，五只野牛，我这枪就赚回来了。</p>
@@ -20,58 +20,58 @@
 <p>全世界三分之二的间歇喷泉都集中在黄石公园。大棱镜温泉被誉为“地球最美丽表面”。从里向外呈现出蓝、绿、黄、橙、橘色和红色等宝石般的色彩。</p>
 <p>“老忠实喷泉”得名于它非常有规律的喷发时间。在喷泉区的服务中心，会用黑板写出下一次的喷发时间。在现场，喷泉会预先有几次小的冒气儿，孩子们还有第一次来的旅客会以为这就是喷发了而欢呼，身边一个老人温和地向你微笑，指一下手腕戴手表的位置，会意地告诉你，还没有到时间呢。快到时间的时候，那位老人会用手指指自己的眼睛，然后让你看向喷泉。太神奇了，几乎就是同时，“老忠实”爆发。老人这个时候，开心地对你说一个英文词：Faith，虔诚和信心。</p>
 <p>公园所有间歇泉都在日夜不停地一会腾起，一会沉落，仿佛跳着有节奏的舞蹈。这是造物主所栽培的最奇特的花朵，它们一年四季盛开，从不感到厌倦与疲惫。</p>
-<figure id="attachment_14205801" aria-describedby="caption-attachment-14205801" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/03/id14205801-new_000_Was3979404.jpg"><img class="size-large wp-image-14205801" src="https://i.epochtimes.com/assets/uploads/2024/03/id14205801-new_000_Was3979404-600x385.jpg" alt="" width="600" b="385" /></a><figcaption id="caption-attachment-14205801" class="wp-caption-text">老忠实喷泉”得名于它非常有规律的喷发时间。（Mark Ralston / AFP）</figcaption></figure>
+<figure id="attachment_14205801" aria-describedby="caption-attachment-14205801" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/03/id14205801-new_000_Was3979404.jpg"><img decoding="async" class="size-large wp-image-14205801" src="https://i.epochtimes.com/assets/uploads/2024/03/id14205801-new_000_Was3979404-600x385.jpg" alt="" width="600" b="385" /></a><figcaption id="caption-attachment-14205801" class="wp-caption-text">老忠实喷泉”得名于它非常有规律的喷发时间。（Mark Ralston / AFP）</figcaption></figure>
 <p>黄石大峡谷是公园最壮丽的景观，五光十色的风化火山岩。在寒风中天长日久的吹袭下，从头到脚都闪烁着耀眼的光泽，看上去像一幅巨大的油画，气势磅礡。</p>
-<p>黄石公园也是全美最大的野生动物保护区。这里有美国最古老也最大的野牛群。在公园野营，最害怕和最惊喜的就是跟熊相遇。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%9F%E5%B3%B0.md#1">江峰</a>有个同事，原来一直跟大家说，在野外碰见熊应该怎样装死。结果那天晚上，他在露营地还真的遇见了熊，双方互相对看几秒钟，他完全忘记了怎么装死，大喊一声：熊啊！扭头就跑。幸运的是那只熊没追上去，大概也在心里大喊一声：人啊！扭头就跑。</p>
-<figure id="attachment_14205800" aria-describedby="caption-attachment-14205800" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/03/id14205800-new_000_Was6960766.jpg"><img class="size-large wp-image-14205800" src="https://i.epochtimes.com/assets/uploads/2024/03/id14205800-new_000_Was6960766-600x417.jpg" alt="" width="600" b="417" /></a><figcaption id="caption-attachment-14205800" class="wp-caption-text">在黄石公园野营，最害怕和最惊喜的就是跟熊相遇。（Karen Bleier / AFP）</figcaption></figure>
+<p>黄石公园也是全美最大的野生动物保护区。这里有美国最古老也最大的野牛群。在公园野营，最害怕和最惊喜的就是跟熊相遇。江峰有个同事，原来一直跟大家说，在野外碰见熊应该怎样装死。结果那天晚上，他在露营地还真的遇见了熊，双方互相对看几秒钟，他完全忘记了怎么装死，大喊一声：熊啊！扭头就跑。幸运的是那只熊没追上去，大概也在心里大喊一声：人啊！扭头就跑。</p>
+<figure id="attachment_14205800" aria-describedby="caption-attachment-14205800" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/03/id14205800-new_000_Was6960766.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14205800" src="https://i.epochtimes.com/assets/uploads/2024/03/id14205800-new_000_Was6960766-600x417.jpg" alt="" width="600" b="417" /></a><figcaption id="caption-attachment-14205800" class="wp-caption-text">在黄石公园野营，最害怕和最惊喜的就是跟熊相遇。（Karen Bleier / AFP）</figcaption></figure>
 <p>实际上，自从国家公园进行露营地食品管理之后，几十年来熊袭击人的事件是罕见的。野营地会有一个大铁箱子，专门放食品。记得，千万别把小吃带进账篷，馋嘴的熊会到你的枕头旁偷吃的。</p>
 <p>人与自然的谐和，让黄石公园被美国人自豪地称为“地球上最独一无二的神奇乐园”。它那神奇又独特的美景和生态环境，是造物主赐予懂得珍惜的人的珍贵礼物。</p>
-<p>这美国现代史中有一个荒野概念。说荒野就是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E6%98%8E.md#1">文明</a>，这种观点中国人比较难以理解，文明不就是摆脱了荒野吗？都盖成大楼房，建成工厂那才叫做文明呀？</p>
-<p>美国人不那么想。说荒野是所谓<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E6%98%8E.md#1">文明</a>的另一面，荒野的纯净程度，是人类看待自然的态度。这有点儿像中国古人说的“道”。</p>
+<p>这美国现代史中有一个荒野概念。说荒野就是文明，这种观点中国人比较难以理解，文明不就是摆脱了荒野吗？都盖成大楼房，建成工厂那才叫做文明呀？</p>
+<p>美国人不那么想。说荒野是所谓文明的另一面，荒野的纯净程度，是人类看待自然的态度。这有点儿像中国古人说的“道”。</p>
 <p>来自欧洲的白人，第一批进入黄石地区的新移民可不是为了欣赏大自然来的，他们荷枪实弹，只为了驱赶世代居住在那里的印第安土着并占取自然资源，向欧洲的领主一样，划出一片片地盘。美国“人人生而平等”的建国理念，和宗教的对自然与神灵的敬畏，慢慢地转变着人们的观念，这样的自然，是不该属于某些个人的，甚至不该只属于一个时代。</p>
 <p>就在南北战争厮杀得最惨烈的时候，林肯总统通过了一个自然保护法案。对现在位于加利福尼亚的优胜美地国家公园用法律的条款，将那一片大自然以其原有的状态永久保护，这是人类历史上的第一次。</p>
 <p>这种荒野观在美国上流社会和知识层成为一种时尚。1907年创立的“童子军运动”，就是要让少年接触和感受大自然，培养具有亲和自然精神的公民。后来美国人在经济发展的同时，面对城市扩张、汽车普及，提出了“土地伦理”这个概念。强调对自然的谦恭和尊重。</p>
-<p>水坝曾被视为现代工程的壮举，是人类改造大自然的标志。每一座水坝，都像一把枷锁。你再也听不见河流的的欢腾，流域的生命包括人在内，萎靡不振。在过去25年里，美国近900座水坝被拆除，人们开始重拾丢弃的价值。</p>
+<p>水坝曾被视为现代工程的壮举，是人类改造大自然的标志。每一座水坝，都像一把枷锁。你再也听不见河流的欢腾，流域的生命包括人在内，萎靡不振。在过去25年里，美国近900座水坝被拆除，人们开始重拾丢弃的价值。</p>
 <p>什么是真正的财富？是污染和健康换来的高楼大厦吗？口袋里的钱多起来的时候，肿瘤和堕落也多起来了。美国人惊讶地发现，在他们拆除水坝之后，大自然以超越科学家的预料的速度在恢复，鱼多了，天上的鹰多了！人们更加开心和健康了。</p>
 <p>历史上的今天，第一个美国国家公园，黄石公园建立：一花一木一世界，一思一念定未来。＠*#</p>
-<figure id="attachment_14205817" aria-describedby="caption-attachment-14205817" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/03/id14205817-new_parchment-paper.jpg"><img class="size-large wp-image-14205817" src="https://i.epochtimes.com/assets/uploads/2024/03/id14205817-new_parchment-paper-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14205817" class="wp-caption-text">（“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%9F%E5%B3%B0.md#1">江峰</a>时刻”提供）</figcaption></figure>
+<figure id="attachment_14205817" aria-describedby="caption-attachment-14205817" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/03/id14205817-new_parchment-paper.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14205817" src="https://i.epochtimes.com/assets/uploads/2024/03/id14205817-new_parchment-paper-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14205817" class="wp-caption-text">（“江峰时刻”提供）</figcaption></figure>
 <p>——转载自《<ahref="https://www.epochweekly.com/">新纪元</a>》</p>
-<p><a title="YouTube video player" src=""></a><a href="https://dryak9kcfpt3j.cloudfront.net/H4kKiJTQe"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/g_l0zTZytRM?si=5BVOgxh_jXniT3Cb" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a loading="lazy" title="YouTube video player" src=""></a><a href="https://d2csrn8d5ncbve.cloudfront.net/N0qaJCg1u"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/g_l0zTZytRM?si=5BVOgxh_jXniT3Cb" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <p>责任编辑：王堇</p>
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149352.md#1">【历史的瞬间】看是一幅画 听像一首歌——邓丽君</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/6/n14174477.md#1">【历史的瞬间】路易威登：人的一生，就是一次旅行</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/29/n14191518.md#1">【历史的瞬间】上瘾的水和它的文化——可口可乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/2/2/n3160630.md#1">历史上的今天(3月31日)</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/2/2/n3160628.md#1">历史上的今天(3月30日)</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/2/2/n3160624.md#1">历史上的今天(3月29日)</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/2/2/n3160623.md#1">历史上的今天(3月28日)</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/2/2/n3160621.md#1">历史上的今天(3月26日)</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/2/2/n3160616.md#1">历史上的今天(3月25日)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/2/n14149352.md#1">【历史的瞬间】看是一幅画 听像一首歌——邓丽君</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/6/n14174477.md#1">【历史的瞬间】路易威登：人的一生，就是一次旅行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/29/n14191518.md#1">【历史的瞬间】上瘾的水和它的文化——可口可乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/2/2/n3160630.md#1">历史上的今天(3月31日)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/2/2/n3160628.md#1">历史上的今天(3月30日)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/2/2/n3160624.md#1">历史上的今天(3月29日)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/2/2/n3160623.md#1">历史上的今天(3月28日)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/2/2/n3160621.md#1">历史上的今天(3月26日)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/2/2/n3160616.md#1">历史上的今天(3月25日)</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/9/n11100959.md#1" target="_blank">共产暴政录：唐山大地震前后之怪相</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/12/n11252250.md#1" target="_blank">大陆公安 从参与迫害到修炼法轮功</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/4/n10022923.md#1" target="_blank">宋永毅：江青和张玉凤的秘密战争</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/10/n7881771.md#1" target="_blank">大法开传 福泽众生</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/18/n14205390.md#1">【未解之谜】史上最强《辛普森一家》幕后有“高人”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/22/n14207973.md#1">【未解之谜】东方百慕大 神秘失踪案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187715.md#1">【古韵流芳】红杏尚书宋祁 不负繁华春景</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/18/n14205204.md#1">为啥婚外情遇到的都是“渣”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/18/n14205448.md#1">考古新发现：庞贝古城精美壁画面世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/23/n14209263.md#1">【人物真相】西装鲨鱼沈南鹏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/24/n14209906.md#1">【人物真相】网传“沉默巨虎”令苗华被聚焦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/23/n14209304.md#1">【时事金扫描】人民币汇率突暴跌 震惊金融市场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/23/n14209172.md#1">浙江农夫山泉饮用水有限公司注销</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/22/n14208629.md#1">靠养老金难过活 中国退休人士被迫再就业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/22/n14208673.md#1">美版《三体》以文革批斗开场 传中共下令封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/23/n14208647.md#1">《葬送的芙莉莲 第二季》影评：高难度测验奠定优良看点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/23/n14209273.md#1">台新人曾靖演《三体》 试镜误以为是学生制作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/21/n14207791.md#1">资深男星麦克艾密特沃许心脏骤停去世 享年88岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/23/n14209291.md#1">汪小菲名字疑遭屏蔽 闯豪宅以另一名头登热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：春天里的素色清道夫 不知疲倦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">这种肥皂不会耗损 永远陪伴你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/21/n14207933.md#1">5清洁剂恐有毒 小苏打+精油清洁健康又干净</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/24/n14209824.md#1">苦恼房价太贵？搬家到这里直接送土地！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/21/n14207845.md#1">春天一定要养肝 中医推荐肝脏喜爱的3种粥</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284970.md#1">【环球直击】英国大选工党获胜 新首相面临考验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285779.md#1">【车评】美式豪电车 2024 Cadillac LYRIQ Sport 3 AWD</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285173.md#1">岳阳官方堵洞庭湖溃堤失败 “堵嘴”文件曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285003.md#1">洞庭湖决堤 洪水漫过房顶 村民连夜逃难</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251916.md#1">稳血糖又减肥 3运动摆脱糖尿病</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/3/19/n14205794.htm">【历史的瞬间】荒野就是文明──黄石公园</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/3/19/n14205794.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/3/19/n14205794.htm">【历史的瞬间】荒野就是文明──黄石公园</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/3/19/n14205794.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
